--- a/entrypoints/options/global-over-write.css
+++ b/entrypoints/options/global-over-write.css
@@ -1,3 +1,8 @@
-html{
-    overflow: auto;
+html {
+  overflow: auto;
+}
+
+html body[data-scroll-locked] {
+  --removed-body-scroll-bar-size: 0 !important;
+  margin-right: 0 !important;
 }
